--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 @import "tailwindcss";
 html{
   overflow-x: hidden;
+
+}
+.nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 10000;
 }
 .swiper-slide {
   transform: scale(0.85);
@@ -10,4 +17,7 @@ html{
 .swiper-slide-active {
   transform: scale(1.15);
   z-index: 10;
+}
+@utility flex-center{
+@apply flex justify-center items-center;
 }
